{
  "apiErrorConnectionFailed": "Connection failed",
  "apiErrorGeneric": "API error ({status})",
  "apiErrorInvalidCredentials": "Invalid participant ID or key",
  "apiErrorInvalidResponse": "Invalid response received",
  "apiErrorInvalidUrl": "Invalid URL",
  "apiErrorTimeout": "Request timed out",
  "appName": "Okra",
  "dialogNo": "NO",
  "dialogOk": "OK",
  "dialogYes": "YES",
  "errorGeneric": "Error: {error}",
  "errorRetry": "RETRY",
  "errorUnknown": "Unknown error",
  "experimentsIntro": "Okra is an app built at the University of Zurich. Researchers can use Okra to find out how well people can understand texts.\n\nIf you are a study participant, you should have a QR code. Scan this QR code to get your tasks.",
  "experimentsNoTasks": "No tasks available at the moment",
  "experimentsPageTitle": "Experiments",
  "experimentsRefresh": "Refresh",
  "experimentsScanQrCode": "SCAN QR CODE",
  "experimentsStart": "START",
  "experimentsTasksLeft": "{howMany, plural, one{1 task left} other{{howMany} tasks left}}",
  "instructionsLoadingAudioFailed": "Loading audio failed",
  "instructionsRestartPracticeTask": "RESTART PRACTICE TASK",
  "instructionsStartAudio": "Read aloud",
  "instructionsStartPracticeTask": "START PRACTICE TASK",
  "instructionsStartTask": "START TASK",
  "instructionsStopAudio": "Stop reading",
  "instructionsTitle": "Instructions",
  "registrationCameraPermissionRequired": "Camera permission required",
  "registrationInvalidQrCode": "Invalid QR code",
  "registrationKey": "Registration key",
  "registrationOk": "OK",
  "registrationPageTitle": "Register API",
  "registrationParticipantId": "Participant ID",
  "registrationQrScannerTitle": "Scan QR code",
  "registrationScanQrCode": "QR CODE",
  "registrationUrl": "API URL",
  "settingsAboutHeading": "About",
  "settingsAboutText": "An app for text readability and comprehension experiments",
  "settingsAddApi": "Add API",
  "settingsApiDate": "Added on {date} {time}",
  "settingsApiHeading": "APIs",
  "settingsDeleteApi": "Delete API",
  "settingsDeleteApiDialogTitle": "Delete API?",
  "settingsPageTitle": "Settings",
  "settingsResetTutorial": "Reset tutorial",
  "settingsResetTutorialDialogTitle": "Reset tutorial?",
  "settingsShowCompletedExperiments": "Show completed experiments",
  "settingsTutorialHeading": "Tutorial",
  "taskAbortDialogTitle": "Do you really want to abort?",
  "taskAdvance": "CONTINUE",
  "taskFinish": "FINISH",
  "taskLexicalDecisionNonword": "NOT A WORD",
  "taskLexicalDecisionWord": "WORD",
  "taskPracticeIndicatorSubtitle": "This task does not count",
  "taskPracticeIndicatorTitle": "PRACTICE",
  "taskQuestionAnsweringExpandQuestions": "Answer questions",
  "taskReactionTimeIntro": "Pop the balloon!",
  "taskReadingCorrect": "CORRECT",
  "taskReadingCorrectionDialogText": "Please correct your answers.",
  "taskReadingCorrectionDialogTitle": "{howMany, plural, one{1 answer} other{{howMany} answers}} incorrect",
  "taskReadingIncorrect": "INCORRECT",
  "taskResultsFinishExperiment": "FINISH EXPERIMENT",
  "taskResultsMessage1": "Awesome!",
  "taskResultsMessage2": "Well done!",
  "taskResultsMessage3": "Great job!",
  "taskResultsNextTask": "NEXT TASK",
  "taskResultsNextTaskCounts": "The next task will count!",
  "taskResultsNoNextTask": "LATER",
  "taskResultsRepeatPracticeTask": "REPEAT PRACTICE TASK",
  "taskResultsSecondsTaken": "{howMany, plural, one{1 second} other{{howMany} seconds}}",
  "taskRotateLandscape": "Rotate your phone into landscape mode",
  "taskRotatePortrait": "Rotate your phone into portrait mode",
  "taskTrailMakingStart": "START",
  "tutorialName": "Tutorial"
}